add/migration and api by swagger
