# app/Models/TaskComment.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class TaskComment extends Model
+{
+    protected $fillable = ['task_id', 'user_id', 'comment'];
+    public $timestamps = false;
+    protected $guarded = [];
+
+    public function task()
+    {
+        return $this->belongsTo(Task::class);
+    }
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
